<resources>
    <string name="app_name">Pogodne podlaskie</string>
    <string name="pressure_label">Ciśnienie</string>
    <string name="wind_label">Wiatr</string>
    <string name="humidity_label">Wilgotność</string>
    <string name="sunrise_label">Wschód słońca</string>
    <string name="sunset_label">Zachód słońca</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Włącz powiadomienia</string>
    <string name="pref_enable_notifications_true">Włączone</string>
    <string name="pref_enable_notifications_false">Wyłączone</string>
    <string name="pref_sync_time_key" translatable="false">sync_time</string>
    <string name="pref_sync_time_label">Czas synchronizacji</string>
    <string name="settings">Ustawienia</string>
    <string name="pref_sync_time_default">7:00</string>
    <string name="notification_title">Pobrano pogodę na dziś</string>
    <string name="notification_content_text">Czas aktualizacji:</string>
    <string name="bad_sync_time_format_message">Prawidłowy format godziny: HH:mm</string>
    <string name="no_data_found">Nie znaleziono danych. Włącz Internet, aby uzyskać najświeższe dane pogodowe.</string>
    <string name="message_no_connection">Nie można uaktualnić danych, sprawdź połączenie z internetem.</string>
    <string name="error_data">Wystąpił niespotykany błąd. Spróbuj odświeżyć bądź zrestartować aplikację.</string>
    <string name="weather_details_error_message">Wystąpił nieoczekiwany błąd. Przejdź do poprzedniego ekranu.</string>
    <string name="default_placeholder">-</string>
    <string name="notification_channel_name">Pogodne podlaskie</string>
</resources>
