<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SwitchPreferenceCompat
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

    <EditTextPreference
        android:inputType="text"
        android:key="@string/pref_sync_time_key"
        android:singleLine="true"
        android:title="@string/pref_sync_time_label"
        tools:text="@string/pref_sync_time_default" />
</PreferenceScreen>
